--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "query-string": "^6.13.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-player": "^2.7.2",
+    "react-slick": "^0.27.14",
     "react-toastify": "^6.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.32.8"
   }
 }
