--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.2.0",
+    "@stripe/stripe-js": "^1.11.0",
     "classnames": "^2.2.6",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
